# VariableSpeedDubins

./: CMakeLists.txt  LICENSE.md  README.md  README.txt  build.sh  clean.sh  install_deps.sh
programs/: testEndpointAllCands.cpp  testEndpointAllPaths.cpp  testPlotAllPathTypes.cpp  testPlotPath.cpp  testSolveAllPaths.cpp  testSolveSinglePath.cpp
src/: MathTools.cpp  MathTools.h  MathToolsArma.h  MathToolsArma_Combinatronics.cpp  MathToolsArma_Combinatronics.h  MathToolsArma_Geometry.cpp  MathToolsArma_Geometry.h  MathToolsArma_OctavePlotting.cpp  MathToolsArma_OctavePlotting.h  MathToolsArma_Polytopes.cpp  MathToolsArma_Polytopes.h  MathToolsArma_VectorOperators.cpp  MathToolsArma_VectorOperators.h  MathToolsArma_cddlib.cpp  RobustDubins.h  RobustDubins_Path.cpp  RobustDubins_Path.h  RobustDubins_Problem.cpp  RobustDubins_Problem.h  RobustDubins_Solver.cpp  RobustDubins_Solver.h  RobustDubins_Utils.cpp  RobustDubins_Utils.h  VSDNLP.cpp  VSDNLP.h  VSDPath.cpp  VSDPath.h  VSDProblem.cpp  VSDProblem.h  VSDSolver.cpp  VSDSolver.h  VSDUtils.h  VSDUtils_costFunction.cpp  VSDUtils_debug.cpp  VSDUtils_displacementsToPath.cpp  VSDUtils_expandParamsShort.cpp  VSDUtils_guessStartPoint.cpp  VSDUtils_linearConstraints.cpp  VSDUtils_nonlinearEqualityConstraintJacobian.cpp  VSDUtils_nonlinearInequalityConstraints.cpp  (+3 more)
